--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,54 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/box1"
         style="@style/text_style"
         android:text="@string/textview1"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.019" />
+
+    <TextView
+        android:id="@+id/box2"
+        style="@style/text_style"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:text="Box Two"
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/box1" />
+
+    <TextView
+        android:id="@+id/box3"
+        android:layout_width="@dimen/width"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:text="Box Three"
+        app:layout_constraintBottom_toTopOf="@+id/box4"
+        app:layout_constraintTop_toTopOf="@+id/box2"
+        tools:layout_editor_absoluteX="197dp" />
+
+    <TextView
+        android:id="@+id/box4"
+        android:layout_width="@dimen/width"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:text="Box Four"
+        app:layout_constraintBottom_toTopOf="@+id/box5"
+        app:layout_constraintTop_toBottomOf="@+id/box3"
+        tools:layout_editor_absoluteX="197dp" />
+
+    <TextView
+        android:id="@+id/box5"
+        android:layout_width="@dimen/width"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:text="Box Five"
+        app:layout_constraintBottom_toBottomOf="@+id/box2"
+        app:layout_constraintTop_toBottomOf="@+id/box4"
+        tools:layout_editor_absoluteX="198dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
