--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         style="@style/text_style"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:text="Box Two"
+        android:text="@string/box_two"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/box1" />
@@ -31,30 +31,35 @@
         android:id="@+id/box3"
         android:layout_width="@dimen/width"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:background="#4CAF50"
-        android:text="Box Three"
+        android:text="@string/box_three"
         app:layout_constraintBottom_toTopOf="@+id/box4"
-        app:layout_constraintTop_toTopOf="@+id/box2"
-        tools:layout_editor_absoluteX="197dp" />
+        app:layout_constraintStart_toEndOf="@+id/box2"
+        app:layout_constraintTop_toTopOf="@+id/box2" />
 
     <TextView
         android:id="@+id/box4"
         android:layout_width="@dimen/width"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:background="#4CAF50"
-        android:text="Box Four"
+        android:text="@string/box_four"
         app:layout_constraintBottom_toTopOf="@+id/box5"
-        app:layout_constraintTop_toBottomOf="@+id/box3"
-        tools:layout_editor_absoluteX="197dp" />
+        app:layout_constraintStart_toEndOf="@+id/box2"
+        app:layout_constraintTop_toBottomOf="@+id/box3" />
 
     <TextView
         android:id="@+id/box5"
         android:layout_width="@dimen/width"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:background="#4CAF50"
-        android:text="Box Five"
+        android:text="@string/box_five"
         app:layout_constraintBottom_toBottomOf="@+id/box2"
-        app:layout_constraintTop_toBottomOf="@+id/box4"
-        tools:layout_editor_absoluteX="198dp" />
+        app:layout_constraintStart_toEndOf="@+id/box2"
+        app:layout_constraintTop_toBottomOf="@+id/box4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
